--- a/responsive.css
+++ b/responsive.css
@@ -11,10 +11,12 @@
     }
 }
     .card img {
-        width: 50%;
+        width: 75%;
+        margin: 0 auto;
     }
     .profile img {
-        width: 7%;
+        width: 15%;
+        margin: 0 auto;
     }
 
 @media (max-width:670px){
@@ -23,7 +25,7 @@
     }
     aside {
         float: right;
-        width:5%;
+        width:20%;
     }
     footer{
         text-align: center;
@@ -31,9 +33,11 @@
     }
 }
     .card img {
-        width: 30%;
+        width: 50%;
+        margin: 0 auto;
     }
 
     .profile img {
-        width: 2%;
+        width: 10%;
+        margin: 0 auto;
     }
