--- a/style.css
+++ b/style.css
@@ -117,6 +117,13 @@ article {
     padding: 100px;
     margin-top:10px;
 }
+.profile header img {
+    width: 250px;
+    padding: 0px;
+    margin-top: 5px;
+    margin-bottom: 7px;
+    float: right;
+}
 
 .profile header {
     padding-top: 50px;
