--- a/responsive.css
+++ b/responsive.css
@@ -1,23 +1,33 @@
 @media (max-width: 1000px) {
     content {
         font-size: 32px;
+        width: 700px;
+    }
+    content img {
+        width: 500px;
+        display: center;
     }
     aside {
         float: right;
-        width : 25%;
+        width : 200px;
     }
     footer {
         text-align: center;
     }
 }
     .profile img {
-        width: 12%;
-        margin: 0 auto;
+        width: 100px%;
+        display: center;
     }
 
 @media (max-width:670px){
     content {
         font-size: 24px;
+        width: 400px;
+    }
+    content img {
+        width: 300px;
+        display: center;
     }
     aside {
         float: right;
@@ -29,6 +39,6 @@
     }
 
     .profile img {
-        width: 10%;
-        margin: 0 auto;
+        width: 100px;
+        display: center;
     }
