--- a/responsive.css
+++ b/responsive.css
@@ -18,6 +18,7 @@
     .profile img {
         width: 100px%;
         display: center;
+        padding-left: 0;
     }
 
 @media (max-width:670px){
@@ -41,4 +42,5 @@
     .profile img {
         width: 100px;
         display: center;
+        padding-left: 0;
     }
