--- a/responsive.css
+++ b/responsive.css
@@ -5,7 +5,7 @@
     }
     content img {
         width: 500px;
-        display: center;
+        float: left;
     }
     aside {
         float: right;
@@ -17,7 +17,7 @@
 }
     .profile img {
         width: 100px%;
-        display: center;
+        float: right;
         padding-left: 0;
     }
 
